welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: ')' expected but '=' found.
	if (litMessage():String=A) {
                               ^BDRBuggle:7: error: illegal start of simple expression
}
^