welcome.lessons.welcome.bdr.BDR.scala.code
while (estSurMessage():Boolean) {
	litMessage():String
	if (litMessage():String=A) {
		avance()
	}
}
